--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -21,6 +21,7 @@
                     </div>
                 </div>
             </a>
+            <a href="#"> Link to Artist</a>
         </div>
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
@@ -31,6 +32,7 @@
                     </div>
                 </div>
             </a>
+            <a href="#"> Link to Artist</a>
         </div>
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
@@ -41,38 +43,7 @@
                     </div>
                 </div>
             </a>
-        </div>
-    </div>
-    <div class="row produktShop" >
-        <div class="aProdukt col-md-12">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="aProdukt col-md-12">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="aProdukt col-md-12">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
+            <a href="#"> Link to Artist</a>
         </div>
     </div>
     <div class="row produktShop" >
@@ -85,6 +56,7 @@
                     </div>
                 </div>
             </a>
+            <a href="#"> Link to Artist</a>
         </div>
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
@@ -95,6 +67,7 @@
                     </div>
                 </div>
             </a>
+            <a href="#"> Link to Artist</a>
         </div>
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
@@ -105,6 +78,42 @@
                     </div>
                 </div>
             </a>
+            <a href="#"> Link to Artist</a>
+        </div>
+    </div>
+    <div class="row produktShop" >
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+            <a href="#"> Link to Artist</a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt </span>
+                    </div>
+                </div>
+            </a>
+            <a href="#"> Link to Artist</a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+            <a href="#"> Link to Artist</a>
         </div>
     </div>
 </div>
